fixed spacing and article page - first commit since padding issues

--- a/style.css
+++ b/style.css
@@ -316,7 +316,11 @@ p {
  	src:url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitalight.ttf') format('truetype'),
  		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitalight.otf') format('otf'),
  		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitalight.woff') format('woff'),
-		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitalight.woff2') format('woff2');
+		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitalight.woff2') format('woff2'),
+		url('fonts/semplicitalight.ttf') format('truetype'),
+ 		url('fonts/semplicitalight.otf') format('otf'),
+ 		url('fonts/semplicitalight.woff') format('woff'),
+		url('fonts/semplicitalight.woff2') format('woff2');
  	font-weight: 100;
  	font-style: normal;
  }
@@ -326,7 +330,11 @@ p {
  	src:url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitalightitalic.ttf') format('truetype'), 
  		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitalightitalic.otf') format('otf'),
  		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitalightitalic.woff') format('woff'),
-		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitalightitalic.woff2') format('woff2');
+		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitalightitalic.woff2') format('woff2'),
+		url('fonts/semplicitalightitalic.ttf') format('truetype'), 
+ 		url('fonts/semplicitalightitalic.otf') format('otf'),
+ 		url('fonts/semplicitalightitalic.woff') format('woff'),
+		url('fonts/semplicitalightitalic.woff2') format('woff2');
  	font-weight: 100;
  	font-style: italic;
  }
@@ -336,7 +344,11 @@ p {
  	src:url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitamedium.ttf') format('truetype'),
  		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitamedium.otf') format('otf'),
 		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitamedium.woff') format('woff'),
-		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitamedium.woff2') format('woff2');
+		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitamedium.woff2') format('woff2'),
+		url('fonts/semplicitamedium.ttf') format('truetype'),
+ 		url('fonts/semplicitamedium.otf') format('otf'),
+		url('fonts/semplicitamedium.woff') format('woff'),
+		url('fonts/semplicitamedium.woff2') format('woff2');
  	font-weight: 400;
  	font-style: normal;
  }
@@ -346,7 +358,11 @@ p {
  	src:url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitamediumitalic.ttf') format('truetype'),
  		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitamediumitalic.otf') format('otf'),
 		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitamediumitalic.woff') format('woff'),
-		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitamediumitalic.woff2') format('woff2');
+		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitamediumitalic.woff2') format('woff2'),
+		url('fonts/semplicitamediumitalic.ttf') format('truetype'),
+ 		url('fonts/semplicitamediumitalic.otf') format('otf'),
+		url('fonts/semplicitamediumitalic.woff') format('woff'),
+		url('fonts/semplicitamediumitalic.woff2') format('woff2');
  	font-weight: 400;
  	font-style: italic;
  }
@@ -356,7 +372,11 @@ p {
  	src:url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitabold.ttf') format('truetype'),
  		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitabold.otf') format('otf'),
 		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitabold.woff') format('woff'),
-		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitabold.woff2') format('woff2');
+		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitabold.woff2') format('woff2'),
+		url('fonts/semplicitabold.ttf') format('truetype'),
+ 		url('fonts/semplicitabold.otf') format('otf'),
+		url('fonts/semplicitabold.woff') format('woff'),
+		url('fonts/semplicitabold.woff2') format('woff2');
  	font-weight: 600;
  	font-style: normal;
  }
@@ -366,7 +386,11 @@ p {
  	src:url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitabolditalic.ttf') format('truetype'),
 		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitabolditalic.otf') format('otf'),
 		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitabolditalic.woff') format('woff'),
-		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitabolditalic.woff2') format('woff2');
+		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/semplicitabolditalic.woff2') format('woff2'),
+		url('fonts/semplicitabolditalic.ttf') format('truetype'),
+		url('fonts/semplicitabolditalic.otf') format('otf'),
+		url('fonts/semplicitabolditalic.woff') format('woff'),
+		url('fonts/semplicitabolditalic.woff2') format('woff2');
  	font-weight: 600;
  	font-style: italic;
  }
@@ -375,7 +399,10 @@ p {
  	font-family: "LiketheGirlsSansSerif";
  	src:url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/neuzeit.ttf') format('truetype'),
 		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/neuzeit.woff') format('woff'),
-		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/neuzeit.woff2') format('woff2');
+		url('http://likethegirls.com/wp-content/themes/likethegirls2018/fonts/neuzeit.woff2') format('woff2'),
+		url('fonts/neuzeit.ttf') format('truetype'),
+		url('fonts/neuzeit.woff') format('woff'),
+		url('fonts/neuzeit.woff2') format('woff2');
  }
 
 body, 
